# ARES-app

./: .env.example  .gitignore  CHANGELOG.md  README.md  build.sh  manage.py  pyproject.toml  render.yaml
ares/: admin.py  models.py  urls.py  views.py
ares/migrations/: 0001_initial.py  0002_sheetshare.py  0003_rename_ares_sheets_sheet_i_f3065f_idx_ares_sheets_sheet_i_b3a7cd_idx_and_more.py  0004_sheetchatmessage.py  0005_rename_ares_sheetch_sheet_i_3b7b4f_idx_ares_sheetc_sheet_i_af74e5_idx_and_more.py  0006_addon.py  0007_sheet_scripts_data.py  0008_seed_demo_addons.py  0009_workspacegroup_groupwatch_groupsheetassignment_and_more.py  0010_addoninstallation_userreport_workspaceorganization_and_more.py
docs/: ADMIN_REPORTS_README.md  CHANGELOG.md  README.md  SHEET_SHARING_README.md
projekt_baza/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css  worksheet_editor.css
static/js/: ares_api.js  ares_helpdesk.js  ares_i18n.js  ares_sheet.js  ares_storage.js  formula_catalog.js  history_page.js  (+5 more)
templates/: addons_marketplace.html  admin_addons.html  admin_bug_reports.html  admin_users_panel.html  base.html  bug_report.html  dashboard.html  helpdesk.html  helpdesk_content.html  history.html  import_data.html  index.html  login.html  network.html  password_forgot.html  password_reset_confirm.html  profile.html  register.html  reports.html  verify_email.html  worksheet_editor.html  worksheets.html
tests/: conftest.py  test_forms_validation.py  test_models_core.py  test_views_helpers.py
users/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
(+11 files in other folders)
